@@ -298,10 +298,9 @@ Methods
     This function is optional. If it exists, it will be called after a
     successful pull of the product.
 
-``post_create_hook(self, archive, attributes)``
+``post_rebuild_hook(self, archive, attributes)``
     This function is optional. If it exists, it will be called after a
-    successful creation of the product (either ingest or pull). It is called
-    after the more specific hooks.
+    successful rebuild of the product.
 
 ``export_<format name>(self, archive, product, target_path)``
     Methods starting with ``export_`` can be used to implement product type
